--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+spring.application.name=godesii-services
+server.port=8080
 spring.jpa.hibernate.ddl-auto= update
-spring.datasource.url=jdbc:mysql://localhost:3308/godesii-dev?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=sjain
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/godesii-dev?createDatabaseIfNotExist=true
+spring.datasource.username= root
+spring.datasource.password= root
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 logging.level.org.hibernate.SQL=DEBUG
