Add OAuth2 entities, Twilio SMS, and user registration
Introduces OAuth2-related entities, repositories, and services for authorization and consent management. Adds Twilio SMS integration with configuration, service, and request classes. Implements user registration endpoints and response handling, updates constants, and modifies JPA repository scanning. Also updates User entity for unique mobile numbers and adjusts build.gradle dependencies.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,4 +3,19 @@ server:
 
 spring:
   application:
-    name=godesii-services
+    name:godesii-services
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+
+app:
+  twilio:
+    sid: AC113f85df01c5d6965cd1ed5e739797e6
+    token: 9d6b7594eac2c3c1956db43df8685e68
+    phoneNo: +17176708304
+
+  jwt:
+    encryptor:
+      password: password
+      salt: 626F6F746966756C
