--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-authorization-server
-	implementation("org.springframework.security:spring-security-oauth2-authorization-server:1.4.5")
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation("org.springframework.security:spring-security-oauth2-authorization-server:1.4.5")
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
