--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
+	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-authorization-server
+//	implementation("org.springframework.security:spring-security-oauth2-authorization-server:1.4.5")
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -30,6 +31,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // https://mvnrepository.com/artifact/com.twilio.sdk/twilio
+    implementation "com.twilio.sdk:twilio:11.0.0"
 }
 
 tasks.named('test') {
