--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto= update
 spring.datasource.url=jdbc:mysql://localhost:3306/godesii_dev?createDatabaseIfNotExist=true
-spring.datasource.username= root
+spring.datasource.username= godesii_user
 spring.datasource.password= sjain@123
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
