yml file updated with removing the folder nesting

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           source: "build/libs/*.jar"
           target: "/home/ubuntu/app/"
-
+          strip_components: 2
       # -------------------------------
       # 6️⃣ SSH into EC2 and deploy app
       # -------------------------------
