strip added from yml file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,8 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           source: "build/libs/*.jar"
           target: "/home/ubuntu/app/"
+          overwrite: true
+          strip_components: 3
 
       # -------------------------------
       # 6️⃣ Restart Spring Boot service via systemd
