strip added from yml file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,14 +41,14 @@ jobs:
       # -------------------------------
       # 5️⃣ Copy built JAR to AWS EC2
       # -------------------------------
-      - name: Upload JAR to EC2
+      - name: Upload built JAR to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ vars.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_KEY }}
           source: "build/libs/*.jar"
-          target: "/home/ubuntu/app/"
+          target: "/home/ubuntu/app/build/libs/"
           overwrite: true
 
       # -------------------------------
@@ -63,18 +63,24 @@ jobs:
           script_stop: false
           script: |
             set +e
-
             echo "🔹 Deploying latest build to EC2..."
-            mkdir -p /home/ubuntu/app
+            mkdir -p /home/ubuntu/app/build/libs
             cd /home/ubuntu/app/build/libs
 
             echo "🧹 Cleaning old JARs..."
             find . -type f -name "*.jar" ! -newer "$(ls -t *.jar | head -n 1)" -delete || true
 
-            echo "🆕 Updating systemd service JAR..."
+            echo "🆕 Preparing latest JAR..."
             LATEST_JAR=$(ls -t *.jar | head -n 1)
-            echo "🆕 Updating systemd service JAR... $LATEST_JAR"
-            sudo cp "$LATEST_JAR" /home/ubuntu/app/app.jar
+            echo "➡️ Latest JAR: $LATEST_JAR"
+
+            if [ -f "$LATEST_JAR" ]; then
+              echo "📦 Copying $LATEST_JAR to /home/ubuntu/app/app.jar"
+              sudo cp "$LATEST_JAR" /home/ubuntu/app/app.jar
+            else
+              echo "❌ No JAR found in /home/ubuntu/app/build/libs!"
+              exit 1
+            fi
 
             echo "💀 Restarting Spring Boot service..."
             sudo systemctl daemon-reload
