strip added from yml file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,9 +47,8 @@ jobs:
           host: ${{ vars.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_KEY }}
-          source: "build/libs/*.jar"
+          source: "godesii-services/build/libs/*.jar"
           target: "/home/ubuntu/app/"
-          strip_components: 2
 
       # -------------------------------
       # 6️⃣ Restart Spring Boot service via systemd
