--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,9 +47,9 @@ jobs:
           host: ${{ vars.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_KEY }}
-          # 👇 Update this path if your JAR is under a subfolder like APP_name/build/libs/
           source: "build/libs/*.jar"
           target: "/home/ubuntu/app/"
+          strip_components: 2  # ✅ Removes 'build/libs' from path, so no nested folder created
 
       # -------------------------------
       # 6️⃣ Restart Spring Boot service via systemd
@@ -63,44 +63,43 @@ jobs:
           script_stop: false
           script: |
             set -e
-      
+
             echo "🔹 Deploying latest build to EC2..."
             mkdir -p /home/ubuntu/app
             cd /home/ubuntu/app || { echo "❌ Directory not found!"; exit 1; }
-      
-            echo "📦 Listing JAR files before cleanup..."
-            ls -lh *.jar 2>/dev/null || echo "⚠️ No existing JARs found."
-      
+
+            echo "📦 Listing existing JAR files..."
+            ls -lh *.jar 2>/dev/null || echo "⚠️ No JARs found yet (first deploy maybe)."
+
             echo "🧾 Detecting latest runnable JAR (excluding -plain)..."
             LATEST_JAR=$(ls -t *-SNAPSHOT.jar 2>/dev/null | grep -v "plain" | head -n 1 || true)
-      
+
             if [ -z "$LATEST_JAR" ]; then
-              echo "❌ No valid JAR found! Exiting..."
+              echo "❌ No valid JAR found for deployment!"
               exit 1
             fi
-      
-            echo "✅ Found latest JAR: $LATEST_JAR"
-      
-            echo "🧹 Cleaning up older JARs (keeping latest)..."
-            # Only delete if more than one JAR exists
+
+            echo "✅ Latest JAR detected: $LATEST_JAR"
+
+            echo "🧹 Cleaning old JARs (keeping latest)..."
             COUNT=$(ls -1 *.jar 2>/dev/null | wc -l || true)
             if [ "$COUNT" -gt 1 ]; then
               find . -type f -name "*.jar" ! -name "$LATEST_JAR" -delete || true
+              echo "🗑️ Old JARs deleted."
             else
               echo "⚠️ Only one JAR found — skipping cleanup."
             fi
-      
-            echo "🆕 Copying $LATEST_JAR to /home/ubuntu/app/app.jar"
+
+            echo "🆕 Copying $LATEST_JAR → /home/ubuntu/app/app.jar"
             sudo cp "$LATEST_JAR" /home/ubuntu/app/app.jar
-      
+
             echo "💀 Restarting Spring Boot service..."
             sudo systemctl daemon-reload
             sudo systemctl stop springboot || true
             sleep 2
             sudo systemctl start springboot
-      
+
             echo "✅ Checking Spring Boot service status..."
             sudo systemctl status springboot --no-pager || true
-      
-            echo "🎯 Deployment complete!"
-      
+
+            echo "🎯 Deployment complete successfully!"
