--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: 🚀 Deploy Spring Boot App to AWS EC2
 on:
   push:
     branches:
-      - feature/GODESI-1  
+      - master
 
 jobs:
   build-deploy:
@@ -49,7 +49,7 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           source: "build/libs/*.jar"
           target: "/home/ubuntu/app/"
-          strip_components: 2  # ✅ Removes 'build/libs' from path, so no nested folder created
+          strip_components: 2  # Removes 'build/libs' from path, so no nested folder created
 
       # -------------------------------
       # 6️⃣ Restart Spring Boot service via systemd
