--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,25 +2,10 @@ server:
   port: 8081
 
 spring:
+  profiles:
+    active: dev
+
   application:
     name: godesii-services
 
-logging:      
-  level:
-    org.springframework.security: DEBUG
 
-app:
-  twilio:
-    sid: AC113f85df01c5d6965cd1ed5e739797e6
-    token: 9d6b7594eac2c3c1956db43df8685e68
-    phoneNo: +17176708304
-
-
-  jwt:
-    access-token:
-      expiration: 360000
-    refresh-token:
-      expiration: 360000
-    encryptor:
-      password: password
-      salt: 626F6F746966756C
