--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -5,7 +5,7 @@ spring:
     url: jdbc:mysql://localhost:3306/godesii_dev?createDatabaseIfNotExist=true
     username: root
     password: sjain@123
-    driver-class-name: org.hibernate.dialect.MySQL8Dialect
+    driver-class-name: com.mysql.cj.jdbc.Driver
     initialization-mode: always
     continue-on-error: false
     hikari:
@@ -15,6 +15,9 @@ spring:
       connectionTimeout: 300000
       leakDetectionThreshold: 300000
   jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     hibernate:
       ddl-auto: update
