Enable Swagger UI and configure API docs path

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -27,7 +27,9 @@ springdoc:
   api-docs:
     enabled: false
   swagger-ui:
-    enabled: false
+    path: /swagger-ui.html
+    api-docs:
+      path: /v3/api-docs
 
 
 # App Config
