Add AWS S3 integration and config for file storage
Introduces S3Config and S3Service classes to enable AWS S3 file operations, including upload, download, list, and delete. Adds S3 configuration properties to application-dev.yaml and application-prod.yaml. Also adds @JsonIgnore to the 'menu' field in Category to prevent serialization issues.

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -38,6 +38,12 @@ app:
     token: 9d6b7594eac2c3c1956db43df8685e68
     phoneNo: +17176708304
 
+  aws:
+    s3:
+      accessKey:
+      secretKey:
+      region:
+      bucketName:
 
   jwt:
     access-token:
