Add delivery, payment, and order management features
Introduces delivery partner and assignment entities, repositories, and services, along with new delivery controller APIs. Expands order management with new endpoints for placing, confirming, cancelling, and updating orders, and adds payment callback handling and retry logic. Adds enums for order status, cancellation reasons, and payment methods, and updates DTOs and entities to support new fields for delivery, payment, and cart locking. Also includes new exception classes for robust error handling.

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -38,6 +38,10 @@ app:
     token: 9d6b7594eac2c3c1956db43df8685e68
     phoneNo: +17176708304
 
+  razorpay:
+    enabled: true
+    key-id: your_key_id
+    key-secret: your_key_secret
 
   jwt:
     access-token:
