Add AWS S3 file upload controller and S3 config
Introduced AwsBucketController to handle file uploads to AWS S3. Updated application-dev.yaml and application-prod.yaml with S3 credentials, region, and bucket name for proper configuration.

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -45,10 +45,10 @@ app:
     
   aws:
     s3:
-      accessKey:
-      secretKey:
-      region:
-      bucketName:
+      accessKey: AKIA3WMTVBRQTKYR6RGL
+      secretKey: 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
+      region: eu-north-1
+      bucketName: go-desi-bucket
 
   jwt:
     access-token:
