--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/godesii_dev?createDatabaseIfNotExist=true
     username: root
-    password: root
+    password: sjain@123
     driver-class-name: com.mysql.cj.jdbc.Driver
     initialization-mode: always
     continue-on-error: false
@@ -49,10 +49,10 @@ app:
 
   aws:
     s3:
-      accessKey:
-      secretKey:
-      region:
-      bucketName:
+      accessKey: AKIA3WMTVBRQTKYR6RGL
+      secretKey: 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
+      region: eu-north-1
+      bucketName: go-desi-bucket
 
   jwt:
     access-token:
