--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,11 +1,11 @@
 server:
-  port: 8081
+  port: 8082
 # Datasource config
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/godesii_dev?createDatabaseIfNotExist=true
     username: root
-    password: sjain@123
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     initialization-mode: always
     continue-on-error: false
