--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,11 +1,11 @@
 server:
-  port: 8082
+  port: 8081
 # Datasource config
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/godesii_dev?createDatabaseIfNotExist=true
     username: root
-    password: root
+    password: sjain@123
     driver-class-name: com.mysql.cj.jdbc.Driver
     initialization-mode: always
     continue-on-error: false
@@ -62,3 +62,14 @@ app:
     encryptor:
       password: password
       salt: 626F6F746966756C
+
+# Google Pay Configuration (Dev/Test - mock mode)
+googlepay:
+  enabled: false
+  environment: TEST
+  merchant-id: TEST_MERCHANT_ID
+  merchant-name: GoDesii
+  callback-url: http://localhost:8081/api/v1/orders
+  supported-networks: VISA,MASTERCARD,AMEX
+  gateway-name: example
+  gateway-merchant-id: exampleGatewayMerchantId
